Updated rubrics and hand-in boxes

--- a/checklist-group.html
+++ b/checklist-group.html
@@ -208,18 +208,32 @@
 
       <section class="row justify-content-center">
         <div class="col-sm-6 col-xxl-5 py-3">
-          <h3 class="color-buas text-center">Deadlines</h3>
-          <ol>
-            <li><strong>First opportunity:</strong> Friday 5 April 2024 before 18:00</li>
-            <li><strong>Retake opportunity:</strong> Friday 31 May 2024 before 18:00</li>
-          </ol>
+          <h3 class="color-buas text-center">Deadlines and Hand-in boxes</h3>
+          You will need to upload one copy of the website for each of the units that grade the content directly on the website
+          <em>(see instructions in the next heading)</em>.
+          <h5>First opportunity</h5>
+          <ul>
+            <li><strong>Deadline:</strong> Friday 5 April 2024 before 23:59</li>
+            <li>Hand in one copy under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29616" target="_blank">Website – Production</a></li>
+            <li>Hand in one copy under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29621" target="_blank">Website – Content</a></li>
+            <li>Hand in one copy under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29624" target="_blank">Website – Marketing</a></li>
+            <li>Hand in one copy under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29631" target="_blank">Website – Management</a></li>
+          </ul>
+          <h5>Second opportunity</h5>
+          <ul>
+            <li><strong>Deadline:</strong> Friday 5 April 2024 before 23:59</li>
+            <li>Hand in one copy under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29620" target="_blank">Website – Production (Retake)</a></li>
+            <li>Hand in one copy under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29623" target="_blank">Website – Content (Retake)</a></li>
+            <li>Hand in one copy under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29630" target="_blank">Website – Marketing (Retake)</a></li>
+            <li>Hand in one copy under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29632" target="_blank">Website – Management (Retake)</a></li>
+          </ul>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3 bg-lightblue">
-          <h3 class="text-center">Mode of delivery</h3>
+          <h3 class="text-center">Instructions for creating deliverables</h3>
           <ul>
             <li>Deliver the actual website by using GitHub pages (see details in Part 1 of the guide).</li>
             <li>
-              <p class="mb-1">A copy of the repository as a zip file must be posted on Brightspace.</p>
+              <p class="mb-1">A copy of the repository as a zip file must be posted on Brightspace <em>(see links above)</em>.</p>
               <p class="mb-1">This is done by going to your GitHub repository and clicking on “Code” then “Download ZIP”. Please rename your zip file according to the convention below:</p>
                 <p class="font-monospace mb-1 ms-4">coursenumber_<wbr>academicyear_<wbr>classnumber_<wbr>groupnumber_<wbr>assignmentname</p>
                 <p class="mb-1 ms-4">Example:  <span class="font-monospace">PRJ4_<wbr>2324_<wbr>class2_<wbr>group3_<wbr>website.zip</span></p>
@@ -237,7 +251,7 @@
             <li>Information about the brand’s <strong>products and/or services</strong></li>
             <li>Contact information and links to <strong>relevant social media</strong></li>
             <li>Information about the <strong>team</strong></li>
-            <li><s>Material used for assessment, as part of the <strong>corporate</strong> page</s></li>
+            <li>Material used for assessment, as part of the <strong>corporate</strong> page</li>
           </ul>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3 bg-lightorange">
@@ -275,28 +289,33 @@
             </thead>
             <tbody class="align-middle">
               <tr class="">
-                <th rowspan="6" class="text-center">
+                <th rowspan="7" class="text-center">
                   <p class="fst-italic fw-normal m-0">Elements assessed directly via</p>
                   <p>Website</p>
                 </th>
-                <th rowspan="3" class="text-center">Visual qualities</th>
-                <td rowspan="3" class="text-center">
+                <th rowspan="4" class="text-center">Visual qualities</th>
+                <td rowspan="4" class="text-center">
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td class="table-success border-dark">Content is grouped and hierarchized in a way that is outstandingly self-explanatory, intuitive and persuasive with no inconsistencies between pages in terms of navigation and structure.</td>
+                <td class="table-success border-dark">Information is grouped and hierarchized in a way that is outstandingly self-explanatory and that helps make sense of complex content.</td>
                 <td class="table-warning border-dark">Content is grouped, hierarchized and clearly structured, with only few inconsistencies in terms of navigation and structure.</td>
                 <td class="table-danger border-dark">The structure of content is either confusing, unclear and/or inconsistent.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">Uses grids, margins, alignments, contrast and font sizes to achieve an outstandingly clean, professional and legible look and feel at all screen sizes from mobile to desktop.</td>
-                <td class="table-warning border-dark">Page elements are generally aligned, contrasted and legible, with few inconsistencies in terms of visual style. Content stays legible on mobile screen sizes.</td>
-                <td class="table-danger border-dark">Page elements are not properly aligned, lack contrast, are difficult to read, are inconsistent and/or becomes difficult to read at certain screen sizes.</td>
+                <td class="table-success border-dark">Uses grids, margins, alignments, contrast and font sizes to achieve an outstandingly clean, professional and legible look and feel.</td>
+                <td class="table-warning border-dark">Uses grids, margins, alignments, contrast and font sizes to achieve an clean, professional and legible look and feel.</td>
+                <td class="table-danger border-dark">Page elements are not properly aligned, lack contrast, are difficult to read, and/or are inconsistent.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">The website uses a variety of visual elements (e.g. logos, illustrations, photos, infographics, fonts, colours) and design principles to communicate and reinforce the text copy and create a very distinctive atmosphere.</td>
-                <td class="table-warning border-dark">Visual elements support the message and goals of the website and create a consistent atmosphere.</td>
-                <td class="table-danger border-dark">The website makes limites use of visual elements and/or these visual elements add limited value to the message of the website.</td>
+                <td class="table-success border-dark">The website is designed with both desktop and mobile in mind, adapts to the affordances of different devices and makes the best use of screen surface at all sizes.</td>
+                <td class="table-warning border-dark">The website is responsive and looks well designed at all sizes. It can be that either the mobile or desktop version is “leading” and looks better.</td>
+                <td class="table-danger border-dark">The website loses functionality, is illegible and/or looks poorly designed at certain screen sizes.</td>
+              </tr> 
+              <tr>
+                <td class="table-success border-dark">The website uses a variety of visual elements and design principles in a complex and/or original way to communicate, reinforce the text copy and create a very distinctive atmosphere.</td>
+                <td class="table-warning border-dark">The website uses a variety of visual elements and design principles to communicate, reinforce the text copy and create a branded atmosphere.</td>
+                <td class="table-danger border-dark">The website makes limited use of visual elements and/or these visual elements add limited value to the message of the website.</td>
               </tr> 
               <tr>
                 <th rowspan="3" class="text-center">Technical qualities</th>
@@ -305,17 +324,17 @@
                   <p>of production unit</p>
                 </td>
                 <td class="table-success border-dark">All file management described in the guide are strictly adhered to, with all necessary assets located in correctly named folders and all unused assets removed from the final delivery.</td>
-                <td class="table-warning border-dark">File management practices are generally adhered to, with only minor inconsistencies and with only a few unused assets delivered.</td>
-                <td class="table-danger border-dark">Many files do not follow the recommended structure or naming conventions and/or files are missing and/or several unused assets have been left in the repository.</td>
+                <td class="table-warning border-dark">All file management best practices are followed with a maximum of 5 deviations from the guide, inconsistencies or unused files left in the repositories.</td>
+                <td class="table-danger border-dark">More than 5 instances of bad file management practices that deviate from the guide.</td>
               </tr>
               <tr>
-                <td class="table-success border-dark">Follows all coding good practices described in the guide, including the use of appropriate semantic tags, headers, title tags, links to libraries, and proper code identation. Code contains no errors.</td>
-                <td class="table-warning border-dark">Most good practices are adhered to, and the code stays generally legible. Code contains a maximum of 2 errors across the whole website when checked in the W3C validator.</td>
+                <td class="table-success border-dark">Pages are technically complex and follow all good practices: use of appropriate semantic tags, headers, title tags, links to libraries, and proper code identation. Code contains no errors.</td>
+                <td class="table-warning border-dark">Either the page is very technically complex but deviates occasionally from best practices or the page is very simple but follows all best practices. Code contains a maximum of 2 errors across the whole website when checked in the W3C validator.</td>
                 <td class="table-danger border-dark">Code is either hard to read, deviates strongly from good practices and/or has many coding errors.</td>
               </tr>
               <tr>
                 <td class="table-success border-dark">All images are properly resized and compressed for an optimized balance between image quality on one hand, and loading speed and sustainability on the other hand. The best format (JPEG, PNG, SVG) is selected based on the type of content.</td>
-                <td class="table-warning border-dark">A majority of images are optimized. No image is bigger than 1MB.</td>
+                <td class="table-warning border-dark">More than half of delivered image assets are optimized for loading speed and use the proper file format. No image is bigger than 1MB.</td>
                 <td class="table-danger border-dark">A majority of images are not optimized and/or at least one image is bigger than 1MB</td>
               </tr>
               <tr>
@@ -328,8 +347,8 @@
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td class="table-success border-dark">Lists and justifies all design choices: the colour scheme (with colour codes), font choices, user interface elements (grids, carousels, menu organizations etc.), the organization of the navigation and content (e.g. how content units are distributed across pages) by using the vocabulary of (UX) design and relating all choices with insight about the target audience.</td>
-                <td class="table-warning border-dark">Most of the design choices listed in the description of &ldquo;Excellent&rdquo; are present. For the majority of them, design vocabulary is used.</td>
+                <td class="table-success border-dark">Lists and justifies all design choices: the colour scheme (with colour codes), font choices, user interface elements (grids, carousels, menu organizations etc.), the organization of the navigation and content (e.g. how content units are distributed across pages) in detail, by using the vocabulary of (UX) design and relating all choices with insight about the target audience.</td>
+                <td class="table-warning border-dark">Lists and justifies all design choices: the colour palette, font choices, UI elements, the organization of the navigation and content, with justifications and some use of UX vocabulary.</td>
                 <td class="table-danger border-dark">Many design choices are absent and/or do not use the vocabulary of design in their justifications.</td>
               </tr>
               <tr>
