--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -329,6 +329,7 @@
                     <option value="6">Class 6</option>
                     <option value="7">Class 7</option>
                     <option value="8">Class 8</option>
+                    <option value="9">Class 9</option>
                     <option value="NA">N/A (e.g. retake)</option>
                   </select>
                   <label for="classfield" class="form-label">Your class</label>
