--- a/checklist-group.html
+++ b/checklist-group.html
@@ -209,8 +209,9 @@
       <section class="row justify-content-center">
         <div class="col-sm-6 col-xxl-5 py-3">
           <h3 class="color-buas text-center">Deadlines and Hand-in boxes</h3>
-          You will need to upload one copy of the website for each of the units that grade the content directly on the website
-          <em>(see instructions in the next heading)</em>.
+          <p>You will need to upload one copy of the website for each of the units that grade the content directly on the website>
+          <em>(see instructions in the next heading)</em>.></p>
+          <p>Please also make sure that you <strong>add a link to your website in the Brightspace comments.</strong></p>
           <h5>First opportunity</h5>
           <ul>
             <li><strong>Deadline:</strong> Friday 5 April 2024 before 23:59</li>
