--- a/part-4.html
+++ b/part-4.html
@@ -411,14 +411,14 @@
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
             <h3 class="text-center">Deadlines</h3>
-            <p>The full website and justification document will be due on the final deadline of <strong>Thursday 14 April 2023</strong>. There are some intermediary deadlines for your progress on the website:</p>
+            <p>The full website and justification document will be due on the final deadline of <strong>Friday 11 April 2025</strong>. There are some intermediary deadlines for your progress on the website:</p>
             <ul>
-              <li>At the end of <strong>Project Week 5</strong> <em>(4 – 8 March 2024)</em>, you must have a <strong>landing page</strong> ready and published online, which only needs to include the name, logo and colours of your brand. This means that you already have an address for the website, and you can actively use it in your marketing campaign.</li>
-              <li>During <strong>Project Week 7</strong> <em>(18 – 22 March 2024)</em>, you should have progressed on your website enough to perform usability testing. This is self-directed work that you must plan yourselves.</li>
-              <li>During <strong>Project Week 8</strong> <em>(25 – 29 March 2024)</em>, you will receive final feedback on your design and your justification document.</li>
+              <li>At the end of <strong>Project Week 5</strong> <em>(10 – 14 March 2025)</em>, you must have a <strong>landing page</strong> ready and published online, which only needs to include the name, logo and colours of your brand. This means that you already have an address for the website, and you can actively use it in your marketing campaign.</li>
+              <li>During <strong>Project Week 7</strong> <em>(24 – 28 March 2025)</em>, you should have progressed on your website enough to perform usability testing. This is self-directed work that you must plan yourselves.</li>
+              <li>During <strong>Project Week 8</strong> <em>(31 March – 4 April 2025)</em>, you will receive final feedback on your design and your justification document.</li>
               <li>On <strong>Friday 14 April</strong>, you deliver the final website.</li>
             </ul>
-            <p>The retake deadline is at the end of the semester, on <strong>Friday 16 June 2023</strong>.</p>
+            <p>The retake deadline is at the end of the semester, on <strong>Friday 6 June 2025</strong>.</p>
           </div>
           <div class="col-lg-11 col-xxl-10 py-3">
             <h3 class="color-blue text-center">Prototyping</h3>
