Added details on VS Code

--- a/part-1.html
+++ b/part-1.html
@@ -242,7 +242,7 @@
             <ul>
               <li>Know the basics of HTML and how it works within the client-server model.</li>
               <li>Set up the tools you will use for the rest of the course.</li>
-              <li>Edit your first web page with Dreamweaver.</li>
+              <li>Edit your first web page with Dreamweaver <em>(or Visual Studio Code)</em>.</li>
               <li>Publish this web page with GitHub.</li>
             </ul>
           </div>
@@ -263,11 +263,11 @@
             <h3 class="color-blue text-center">Do the work, step by step</h3>
             <p>This is a very brief overview of the tasks you will have to do to complete the first workshop. Items 1 to 4 of the list below are explained in detail in <a href="#setting_up_tools">section 1.4</a> and items 5 to 7 in <a href="#editing_publishing">section 1.6</a>.</p>
             <ol>
-              <li>Install the tools: GitHub Desktop and Dreamweaver.</li>
+              <li>Install the tools: GitHub Desktop and Dreamweaver <em>(or Visual Studio Code)</em>.</li>
               <li>Create a GitHub account</li>
               <li>Clone the résumé template into a repository your GitHub account.</li>
               <li>Synchronize this repository with your laptop.</li>
-              <li>Edit the code to write your own name with Dreamweaver.</li>
+              <li>Edit the code to write your own name with Dreamweaver <em>(or Visual Studio Code)</em>.</li>
               <li>Publish it onto GitHub pages.</li>
               <li>Visit your very own page, anywhere and on any device!</li>
             </ol>
@@ -565,9 +565,9 @@
               <a class="link-light" href="https://web.microsoftstream.com/video/aa741d36-66dd-4be0-869f-59d32ece9d82" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
-              <li>Install a web editor such as Dreamweaver.</li>
+              <li>Install a web editor such as Dreamweaver <em>(or Visual Studio Code)</em>.</li>
               <li>GitHub is a version control system. Create an account and download the desktop app.</li>
-              <li>Copy the template repository, then use GitHub Desktop and Dreamweaver to open it on your desktop.</li>
+              <li>Copy the template repository, then use GitHub Desktop and Dreamweaver  <em>(or Visual Studio Code)</em> to open it on your desktop.</li>
             </ul>
           </div>
         </header>
@@ -598,15 +598,26 @@
               </figure>
             </div>
             <div class="d-flex flex-row align-items-start">
-              <img class="me-1" src="images/part-1/dreamweaver.svg" width="50" alt="Adobe Dreamweaver">
-              <p>An <strong>Integrated Development Environment (IDE)</strong> such as Adobe Dreamweaver, will go several steps further and offer the following helpful features:</p>
+              <div class="me-1">
+                <img class="display-block" src="images/part-1/dreamweaver.svg" width="50" alt="Adobe Dreamweaver">
+                <hr class="my-2">
+                <img class="display-block" src="images/part-1/vscode-icon.svg" width="50" alt="Visual Studio Code">
+              </div>
+              <div>
+              <p>An <strong>Integrated Development Environment (IDE)</strong> such as Adobe Dreamweaver or Visual Studio Code, will go several steps further and offer the following helpful features:</p>
+              <ul>
+                <li>Showing the result of your code in real time.</li>
+                <li>Showing errors in your code.</li>
+                <li>Offering suggestions and autocompletion when you type code</li>
+              </ul>
             </div>
-            <ul>
-              <li>Showing the result of your code in real time.</li>
-              <li>Showing errors in your code.</li>
-              <li>Offering suggestions and autocompletion when you type code</li>
-            </ul>
-            <p>All the examples in the tutorials use Dreamweaver, which is part of the Adobe Creative Cloud suite. You can <a href="https://www.surfspot.nl/software/creatie-ontwerp/adobe-creative-cloud-category/adobe-creative-cloud-met-services-student.html" target="_blank">buy a discounted Adobe CC license from SurfSpot for 133€/year</a>. A free alternative is <a href="https://code.visualstudio.com/" target="_blank">Microsoft&rsquo;s Visual Studio Code</a>.</p>
+          </div>
+            <p>All the examples in the tutorials use Dreamweaver, which is part of the Adobe Creative Cloud suite. You can <a href="https://www.surfspot.nl/software/creatie-ontwerp/adobe-creative-cloud-category/adobe-creative-cloud-met-services-student.html" target="_blank">buy a discounted Adobe CC license from SurfSpot for 133€/year</a>.</p>
+            <p>You can also get <a href="https://code.visualstudio.com/" target="_blank">Microsoft&rsquo;s Visual Studio Code</a> for free.</p>
+            <div class="d-flex flex-row align-items-start">
+              <img class="me-1" src="images/part-1/vscode-live-preview.png" width="50" alt="Visual Studio Live Preview">
+              <p><strong><em>TIP:</em></strong> If you use Visual Studio Code, make sure you install the <a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode.live-server" target="_blank">Live Preview Extension</a> so you can see your changes in real-time when typing your code.</p>
+            </div>
           </div>
           <div class="col-lg-6 col-xxl-5 p-3 px-md-5 px-lg-3 px-xxl-4 bg-lightblue">
             <h3 class="text-center">What is version control?</h3>
