--- a/part-4.html
+++ b/part-4.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Own Styles -->
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- Bootstrap Javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <title>PRJ4 Guide | Part 4: Towards your group website</title>
   </head>
@@ -411,12 +411,12 @@
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
             <h3 class="text-center">Deadlines</h3>
-            <p>The full website and justification document will be due on the final deadline of <strong>Friday 11 April 2025</strong>. There are some intermediary deadlines for your progress on the website:</p>
+            <p>The full website and justification document will be due on the final deadline of <strong>Thursday 17 April 2025</strong>. There are some intermediary deadlines for your progress on the website:</p>
             <ul>
-              <li>At the end of <strong>Project Week 5</strong> <em>(10 – 14 March 2025)</em>, you must have a <strong>landing page</strong> ready and published online, which only needs to include the name, logo and colours of your brand. This means that you already have an address for the website, and you can actively use it in your marketing campaign.</li>
-              <li>During <strong>Project Week 7</strong> <em>(24 – 28 March 2025)</em>, you should have progressed on your website enough to perform usability testing. This is self-directed work that you must plan yourselves.</li>
-              <li>During <strong>Project Week 8</strong> <em>(31 March – 4 April 2025)</em>, you will receive final feedback on your design and your justification document.</li>
-              <li>On <strong>Friday 14 April</strong>, you deliver the final website.</li>
+              <li>At the end of <strong>Project Week 5</strong> <em>(17 – 21 March 2025)</em>, you must have a <strong>landing page</strong> ready and published online, which only needs to include the name, logo and colours of your brand. This means that you already have an address for the website, and you can actively use it in your marketing campaign.</li>
+              <li>During <strong>Project Week 7</strong> <em>(31 March – 4 April 2025)</em>, you should have progressed on your website enough to perform usability testing. This is self-directed work that you must plan yourselves.</li>
+              <li>During <strong>Project Week 8</strong> <em>(7 – 11 April 2025)</em>, you will receive final feedback on your design and your justification document.</li>
+              <li>On <strong>Thursday 17 April</strong>, you deliver the final website.</li>
             </ul>
             <p>The retake deadline is at the end of the semester, on <strong>Friday 6 June 2025</strong>.</p>
           </div>
