--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -362,8 +362,8 @@
             <p>Please follow the naming conventions: the PDF must be named <strong><span id="file-fullname">PRJ4_2324_<span id="file-studentid"></span>_individualwebsite</span>.pdf</strong></p> 
             <p>Please upload to Brightspace:</p>
             <ul>
-              <li>First opportunity under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29613" target="_blank">Individual Web Development</a></li>
-              <li>Second opportunity under <a href="https://study.buas.nl/d2l/common/dialogs/quickLink/quickLink.d2l?ou=8202&type=dropbox&rcode=80D30A08-2792-4034-823D-5F8F3C8B4E3F-29615" target="_blank">Individual Web Development (Retake)</a></li>
+              <li>First opportunity under <a href="https://study.buas.nl/d2l/lms/dropbox/user/folder_submit_files.d2l?db=11622&grpid=0&isprv=0&bp=0&ou=25973" target="_blank">Individual Web Development</a></li>
+              <li>Second opportunity under <a href="https://study.buas.nl/d2l/lms/dropbox/user/folder_submit_files.d2l?db=11623&grpid=0&isprv=0&bp=0&ou=25973" target="_blank">Individual Web Development (Retake)</a></li>
             </ul>
           </form>
         </div>
